# RAF-tran

./: .dockerignore  .gitignore  Dockerfile  README.md  SESSION_SUMMARY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
examples/: 01_solar_zenith_angle_study.py  02_spectral_transmission.py  03_aerosol_types_comparison.py  04_atmospheric_profiles.py  05_greenhouse_effect.py  06_surface_albedo_effects.py  07_cloud_radiative_effects.py  08_ozone_uv_absorption.py  09_radiative_heating_rates.py  10_satellite_observation.py  11_atmospheric_turbulence.py  12_beer_lambert_validation.py  13_planck_blackbody_validation.py  14_rayleigh_scattering_validation.py  15_mie_scattering_validation.py  16_two_stream_benchmarks.py  17_solar_spectrum_analysis.py  18_thermal_emission_validation.py  19_path_radiance_remote_sensing.py  20_visibility_contrast.py  21_laser_propagation.py  22_atmospheric_polarization.py  23_infrared_atmospheric_windows.py  24_volcanic_aerosol_forcing.py  25_water_vapor_feedback.py  26_high_altitude_solar.py  27_twilight_spectra.py  28_multi_layer_cloud.py  29_aod_retrieval_visibility.py  30_spectral_surface_albedo.py  31_limb_viewing_geometry.py  32_config_file_demo.py  33_validation_visualization.py  34_fpa_detection_comparison.py  35_fpa_altitude_detection_study.py  36_hitran_gas_absorption.py  37_adaptive_optics_simulation.py  38_real_cn2_profiles.py  39_spherical_geometry.py  40_weather_profiles.py  (+19 more)
examples/configs/: cloudy_atmosphere.yaml  detection_scenario.yaml  sample_simulation.yaml  volcanic_scenario.json
raf_tran/: __init__.py  cli.py
raf_tran/atmosphere/: __init__.py  profiles.py
raf_tran/config/: __init__.py  atmosphere.py  manager.py  settings.py
raf_tran/core/: __init__.py  atmosphere.py  constants.py  gas_engine.py  rte_solver.py  scattering_engine.py  simulation.py
raf_tran/data/: __init__.py  ingestor.py  spectral_db.py
raf_tran/detection/: __init__.py  johnson_criteria.py  monte_carlo.py  range_equation.py  scenario_loader.py
raf_tran/detectors/: __init__.py  fpa.py
raf_tran/fpa_library/: __init__.py  analysis.py  config.py  database.py  models.py  optimizer.py  sensor.py  visualization.py
raf_tran/gas_optics/: __init__.py  ckd.py  hitran.py
raf_tran/geometry/: __init__.py  paths.py  spherical.py
raf_tran/physics/: __init__.py  gas_absorption.py
raf_tran/rte_solver/: __init__.py  disort.py  two_stream.py
raf_tran/scattering/: __init__.py  mie.py  rayleigh.py
raf_tran/solvers/: __init__.py
raf_tran/targets/: __init__.py  aircraft.py
raf_tran/turbulence/: __init__.py  adaptive_optics.py  cn2_profiles.py  kolmogorov.py  propagation.py  real_cn2_data.py
raf_tran/utils/: __init__.py  air_mass.py  config.py  constants.py  output.py  safe_io.py  spectral.py
raf_tran/validation/: __init__.py  benchmarks.py  tests.py
raf_tran/weather/: __init__.py  online.py  profiles.py
streamlit_app/: app.py
tests/: __init__.py  test_air_mass.py  test_atmosphere.py  test_detection.py  test_gas_optics.py  test_rte_solver.py  test_scattering.py  test_turbulence.py  test_utils.py
tests/atp/: __init__.py  test_acceptance.py
tests/benchmarks/: __init__.py
tests/integration/: __init__.py  test_simulation.py
tests/unit/: __init__.py  test_atmosphere.py  test_scattering.py
tests/validity/: __init__.py  test_physics_validity.py
