[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raf-tran"
version = "0.1.0"
description = "Open source atmospheric radiative transfer library based on scientific literature"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["radiative transfer", "atmospheric science", "MODTRAN", "remote sensing"]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.0.0",
]
viz = [
    "matplotlib>=3.5.0",
]
config = [
    "pyyaml>=6.0",
]
report = [
    "reportlab>=4.0.0",
    "Pillow>=9.0.0",
]
all = [
    "matplotlib>=3.5.0",
    "pyyaml>=6.0",
    "reportlab>=4.0.0",
    "Pillow>=9.0.0",
]

[project.urls]
Homepage = "https://github.com/cohyos/RAF-tran"
Repository = "https://github.com/cohyos/RAF-tran"

[tool.setuptools.packages.find]
where = ["."]
include = ["raf_tran*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N"]
